tests/fixtures/invalid/missing-partition-key.bprint
{
  "schemaVersion": 1.0,
  "entityName": "Order",
  "description": "Order missing partition key",
  "primaryKey": {},
  "fields": [
    { "name": "orderId", "type": "string", "required": true }
  ]
}
